@@ -2,6 +2,7 @@
 - Support rails4
 - Quote selected columns
 - More unobtrusive html views
+- Move () in visibility toggle links inside so they can be overrided
 
 = 3.3.3
 - Allow to override select options in active_scaffold_search_select
